# claude-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.json
agent/: executor.py  history.py  mode.py  queue.py  workspace.py
handlers/: commands.py  messages.py
